Bug 265136 - libusbhid: usbhid.h: add missing include guards
Summary: libusbhid: usbhid.h: add missing include guards
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: usb (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Ed Maste
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-10 20:56 UTC by Andreas Kempe
Modified: 2024-06-09 17:03 UTC (History)
1 user (show)

See Also:


Attachments
[PATCH]: libusbhid: usbhid.h: add missing include guards (755 bytes, patch)
2022-07-10 20:56 UTC, Andreas Kempe
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kempe 2022-07-10 20:56:22 UTC
Created attachment 235176 [details]
[PATCH]: libusbhid: usbhid.h: add missing include guards

Hello,

/usr/include/usbhid.h lacks include guards, leading to annoying build errors when using libusbhid. Add some.

Cordially,
Andreas Kempe
Comment 1 Hans Petter Selasky freebsd_committer freebsd_triage 2022-07-10 21:56:34 UTC
I will patch this tomorrow.

Getting late now.

--HPS
Comment 2 Andreas Kempe 2022-07-10 22:01:07 UTC
I have worked around the issue so there is no rush. Sleep well!
Comment 3 Graham Perrin freebsd_committer freebsd_triage 2022-10-17 12:40:28 UTC
Keyword: 

    patch
or  patch-ready

– in lieu of summary line prefix: 

    [patch]

* bulk change for the keyword
* summary lines may be edited manually (not in bulk). 

Keyword descriptions and search interface: 

    <https://bugs.freebsd.org/bugzilla/describekeywords.cgi>
Comment 4 Mark Linimon freebsd_committer freebsd_triage 2023-07-25 19:45:09 UTC
bugmeister would like to thank Hans Petter for his years of ports maintenance
and his work on FreeBSD in general. May he rest in peace.

An in-memoriam can be read at
https://lists.freebsd.org/archives/freebsd-announce/2023-July/000076.html

With hat:	bugmeister
Comment 5 commit-hook freebsd_committer freebsd_triage 2024-06-06 14:11:05 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=230efeda080f09bc282f50a7a4cfc337fd7c6d0d

commit 230efeda080f09bc282f50a7a4cfc337fd7c6d0d
Author:     Andreas Kempe <kempe@lysator.liu.se>
AuthorDate: 2022-07-10 20:51:48 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2024-06-06 14:09:05 +0000

    libusbhid: add missing include guards

    PR:             265136

 lib/libusbhid/usbhid.h | 5 +++++
 1 file changed, 5 insertions(+)
Comment 6 commit-hook freebsd_committer freebsd_triage 2024-06-09 16:32:53 UTC
A commit in branch stable/14 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=7f0392e1c8a2832f045868b62f8840e73a2f21fa

commit 7f0392e1c8a2832f045868b62f8840e73a2f21fa
Author:     Andreas Kempe <kempe@lysator.liu.se>
AuthorDate: 2022-07-10 20:51:48 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2024-06-09 16:32:16 +0000

    libusbhid: add missing include guards

    PR:             265136

    (cherry picked from commit 230efeda080f09bc282f50a7a4cfc337fd7c6d0d)

 lib/libusbhid/usbhid.h | 5 +++++
 1 file changed, 5 insertions(+)
Comment 7 commit-hook freebsd_committer freebsd_triage 2024-06-09 17:03:58 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=b1e82630b4ab06950af40a96f1324f69ddbce8cc

commit b1e82630b4ab06950af40a96f1324f69ddbce8cc
Author:     Andreas Kempe <kempe@lysator.liu.se>
AuthorDate: 2022-07-10 20:51:48 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2024-06-09 17:02:41 +0000

    libusbhid: add missing include guards

    PR:             265136

    (cherry picked from commit 230efeda080f09bc282f50a7a4cfc337fd7c6d0d)
    (cherry picked from commit 7f0392e1c8a2832f045868b62f8840e73a2f21fa)

 lib/libusbhid/usbhid.h | 5 +++++
 1 file changed, 5 insertions(+)