libusbhid: add missing include guards

PR:		265136